app/assets/stylesheets/application.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

.navbar {
  background-color: black;
  text-color: white;
  margin-bottom: 0px;
}

.jumbotron {
  text-align: center;
  background: none;
  margin-top: 40px;
}

.panel-big-body {
padding: 120px;
}

img {
  width: 160%;
  height: 145px;
  overflow: hidden;
}

.center {
  text-align: center;
}

.smaller img {
  display: block;
  width: 50%;
  margin: 0 auto;
}

